fix some stuff and finalaize
